[package]
name = "chargeprice"
version = "0.1.0"
authors = ["yageek"]
edition = "2018"

[dependencies]
bytes = "0.5"

reqwest = { version = "0.11.0", features = ["json"] }

tokio = { version = "1.2.0", features = ["full"] }
futures = "0.3.8"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.59"

thiserror = "1.0.22"
log = "0.4"

env_logger = { version = "0.8.2" }
